--- a/HackerRankChalenges/MainWindow.xaml
+++ b/HackerRankChalenges/MainWindow.xaml
@@ -30,7 +30,13 @@
             <ItemsControl
                 x:Name="ChalengeList"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center" />
+                VerticalAlignment="Center">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
 
             <UniformGrid
                 Grid.Row="1"
