--- a/HackerRankChalenges/MainWindow.xaml
+++ b/HackerRankChalenges/MainWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="800"
-    Height="450"
+    Height="900"
     mc:Ignorable="d">
     <Window.Resources>
         <ResourceDictionary>
@@ -24,22 +24,40 @@
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ItemsControl
+            <GroupBox Header="Chalenges" 
+                      Background="AliceBlue"
+                      MinHeight="60">
+                <ItemsControl
                 x:Name="ChalengeList"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <UniformGrid />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
-
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </GroupBox>
+            <GroupBox Header="Cracking The Code Interview" Grid.Row="1" 
+                      MinHeight="60"
+                      Background="LightCoral">
+                <ItemsControl
+                x:Name="CrackingTheCoreInterViewList"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </GroupBox>
             <UniformGrid
-                Grid.Row="1"
+                Grid.Row="2"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center">
 
